--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "aws-amplify": "^3.0.18",
+    "classcat": "^4.1.0",
+    "include-media": "^1.4.9",
+    "lodash-es": "^4.17.15",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^5.7.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
@@ -39,6 +46,9 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.3",
+    "@types/react-router": "^5.1.7",
+    "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
     "eslint-config-prettier": "^6.11.0",
