--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "aws-amplify": "^3.0.18",
+    "axios": "^0.19.2",
     "classcat": "^4.1.0",
     "include-media": "^1.4.9",
     "lodash-es": "^4.17.15",
