--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-spring": "^8.0.27",
+    "react-use-gesture": "^7.0.15",
     "typescript": "~3.7.2"
   },
   "scripts": {
