--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
     "react-use-gesture": "^7.0.15",
-    "typescript": "~3.7.2"
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
