--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-hook-form": "^5.7.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.0",
     "react-spring": "^8.0.27",
     "react-use-gesture": "^7.0.15",
     "typescript": "^4.0.3"
@@ -56,15 +56,15 @@
     "@types/lodash-es": "^4.17.3",
     "@types/react-router": "^5.1.7",
     "@types/react-router-dom": "^5.1.5",
-    "@typescript-eslint/eslint-plugin": "^3.3.0",
-    "@typescript-eslint/parser": "^3.3.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-react": "^7.20.0",
-    "prettier": "^2.0.5",
-    "stylelint": "^13.6.1",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-react": "^7.21.5",
+    "prettier": "^2.1.2",
+    "stylelint": "^13.7.2",
     "stylelint-config-css-modules": "^2.2.0",
     "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-property-sort-order-smacss": "^6.3.0",
+    "stylelint-config-property-sort-order-smacss": "^7.0.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.18.0"
