--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@types/react-dom": "^16.9.0",
     "axios": "^0.19.2",
     "classcat": "^4.1.0",
+    "graphql": "^15.4.0",
+    "graphql-request": "^3.3.0",
     "include-media": "^1.4.9",
     "lodash-es": "^4.17.15",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-error-boundary": "^3.0.2",
     "react-hook-form": "^6.11.0",
+    "react-query": "^2.26.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
