Connect budget component to backend

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.0",
     "axios": "^0.19.2",
     "classcat": "^4.1.0",
+    "date-fns": "^2.16.1",
     "graphql": "^15.4.0",
     "graphql-request": "^3.3.0",
     "include-media": "^1.4.9",
@@ -40,7 +41,7 @@
     "updateServiceWorker": "node appendCustomSw.js",
     "prettier": "prettier --write 'src/**/*.{ts,tsx,css,scss}'"
   },
-  "proxy": "https://gcj0x74c01.execute-api.us-east-1.amazonaws.com/dev",
+  "proxy": "http://localhost:4000/local/",
   "eslintConfig": {
     "extends": "react-app"
   },
