--- a/.stylelintrc
+++ b/.stylelintrc
@@ -11,6 +11,7 @@
   "rules": {
     "at-rule-no-unknown": null,
     "declaration-empty-line-before": null,
+    "value-keyword-case": null,
     "scss/at-rule-no-unknown": true
   }
 }
